add more keywords to optimize SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="IZOQt7usK_rBipvDCidE3nFoKFA9IQQt5o3sP-31-s4" />
+    <meta name="keywords" content="nesd, neural network, system design, New England Systems Day, computer systems, distributed systems, machine learning systems, cloud computing, operating systems, system security, Northeastern University, ACM SIGOPS, Khoury College">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
